--- a/gb/20/12/21/n12635455.md
+++ b/gb/20/12/21/n12635455.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/bdifeb3223/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bdifeb3223/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/bdifeb3223/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/bdifeb3223/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/bdifeb3223/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bdifeb3223/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/bdifeb3223/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/bdifeb3223/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/bdifeb3223/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/bdifeb3223/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/bdifeb3223/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/bdifeb3223/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/bdifeb3223/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/bdifeb3223/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/bdifeb3223/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/bdifeb3223/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/bdifeb3223/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/bdifeb3223/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/bdifeb3223/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/bdifeb3223/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/bdifeb3223/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/bdifeb3223/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/bdifeb3223/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/bdifeb3223/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/bdifeb3223/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/bdifeb3223/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/bdifeb3223/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/bdifeb3223/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/bdifeb3223/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/bdifeb3223/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/bdifeb3223/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/bdifeb3223/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/bdifeb3223/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/bdifeb3223/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/bdifeb3223/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/bdifeb3223/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/bdifeb3223/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/bdifeb3223/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/bdifeb3223/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/bdifeb3223/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/bdifeb3223/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/bdifeb3223/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/bdifeb3223/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/bdifeb3223/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/bdifeb3223/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/bdifeb3223/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/bdifeb3223/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>微电影《筑路英雄》首映 感怀老兵为台贡献</h2>
-<a href="https://git.io/JLw8N"><img width="600" src="https://raw.githubusercontent.com/bdifeb3223/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/bdifeb3223/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://duxu97yt14q37.cloudfront.net/R8rn6tEin"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>微电影《筑路英雄》12月21日首映，由退辅会主任委员冯世宽主持。（退辅会提供）
 </h6>
 <hr>
-	<p>【大纪元2020年12月21日讯】（大纪元记者钟元台北报导）中华民国行政院国军退除役官兵辅导委员会（退辅会）于12月21日在武陵农场举行<ahref="https://github.com/bdifeb3223/djy/blob/master/gb/tag/%E5%BE%AE%E7%94%B5%E5%BD%B1.md#1">微电影</a>《<ahref="https://github.com/bdifeb3223/djy/blob/master/gb/tag/%E7%AD%91%E8%B7%AF%E8%8B%B1%E9%9B%84.md#1">筑路英雄</a>》首映，感怀<ahref="https://github.com/bdifeb3223/djy/blob/master/gb/tag/%E8%8D%A3%E6%B0%91.md#1">荣民</a>（中华民国退伍军人的尊称）袍泽为国贡献。</p>
-<p>《<ahref="https://github.com/bdifeb3223/djy/blob/master/gb/tag/%E7%AD%91%E8%B7%AF%E8%8B%B1%E9%9B%84.md#1">筑路英雄</a>》首映典礼，由退辅会主任委员冯世宽主持，典礼中特别邀请民国44（1955）年间随中横测量队徒步翻山越岭，进入山区规划路线的林阿好女士莅临现场致词，现年81岁的林女士叙述当年参与筑路的艰苦状况，并与已逝世夫婿李乐共同投入工程，进而相识相恋的往事。</p>
-<p><center><a src=""></a><a href="https://git.io/JLw8N"><img width="600" src="https://raw.githubusercontent.com/bdifeb3223/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/bdifeb3223/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/kIhMnaPG05I" width="600" b="338" frameborder="0" allowfullscreen="allowfullscreen"></a></center>林阿好同时期许前人“创业维艰”，今人则“守成不易”，中横公路老前辈虽已逐渐凋零，但典型在夙昔，希望现今接棒的后进能“精益求精”，让中横公路在政经观光上持续发挥最大的价值。</p>
+	<p>【大纪元2020年12月21日讯】（大纪元记者钟元台北报导）中华民国行政院国军退除役官兵辅导委员会（退辅会）于12月21日在武陵农场举行<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BE%AE%E7%94%B5%E5%BD%B1.md#1">微电影</a>《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%AD%91%E8%B7%AF%E8%8B%B1%E9%9B%84.md#1">筑路英雄</a>》首映，感怀<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%8D%A3%E6%B0%91.md#1">荣民</a>（中华民国退伍军人的尊称）袍泽为国贡献。</p>
+<p>《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%AD%91%E8%B7%AF%E8%8B%B1%E9%9B%84.md#1">筑路英雄</a>》首映典礼，由退辅会主任委员冯世宽主持，典礼中特别邀请民国44（1955）年间随中横测量队徒步翻山越岭，进入山区规划路线的林阿好女士莅临现场致词，现年81岁的林女士叙述当年参与筑路的艰苦状况，并与已逝世夫婿李乐共同投入工程，进而相识相恋的往事。</p>
+<p><center><a src=""></a><a href="https://duxu97yt14q37.cloudfront.net/R8rn6tEin"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/kIhMnaPG05I" width="600" b="338" frameborder="0" allowfullscreen="allowfullscreen"></a></center>林阿好同时期许前人“创业维艰”，今人则“守成不易”，中横公路老前辈虽已逐渐凋零，但典型在夙昔，希望现今接棒的后进能“精益求精”，让中横公路在政经观光上持续发挥最大的价值。</p>
 <p>另外，承办单位也邀请撰写过“苏花道今昔”等廿多部中横有关著作的台北艺术大学教授李瑞宗，及公路总局第二工程处处长刘世桐致词，让两位分别在学术领域与实际从事中横养护工程的学者专家，分享中横的历史沿革与执行养护工作的点滴。</p>
 <p>“东西横贯公路”辟建是台湾重大建设起点。当时由退辅会主导组成“横贯公路兴建开发委员会”，动员国军及退除役官兵投入横贯公路开通工程，历经两年探勘规划，民国45（1956）年7月7日中部横贯公路开工，至民国61（1972）年10月31日南部横贯公路通车，18年间克服各种极严苛挑战和牺牲，成功完成政府交付任务，创造世界惊异的工程奇迹。</p>
-<p>《筑路英雄》制作缘起于主任委员以国家赋予极具尊崇的上将军身份，亲率文武相关首长及人员，前往长青祠、长春祠祭祀；在祭祀过程中，主委对着英灵牌位诚挚感谢，并对参与人员讲述开路过程，先辈们如何面对艰钜挑战，秉持誓死达成任务的“<ahref="https://github.com/bdifeb3223/djy/blob/master/gb/tag/%E8%8D%A3%E6%B0%91.md#1">荣民</a>精神”，终于为国家打造三条横贯东西向的公路。</p>
+<p>《筑路英雄》制作缘起于主任委员以国家赋予极具尊崇的上将军身份，亲率文武相关首长及人员，前往长青祠、长春祠祭祀；在祭祀过程中，主委对着英灵牌位诚挚感谢，并对参与人员讲述开路过程，先辈们如何面对艰钜挑战，秉持誓死达成任务的“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%8D%A3%E6%B0%91.md#1">荣民</a>精神”，终于为国家打造三条横贯东西向的公路。</p>
 <p>退辅会表示，《筑路英雄》不同于一般报导式的纪录片，影片由荣民导演方英海，以冯世宽上将祭祀辟建横贯公路殉职荣民为主轴，透过冯世宽及参与横贯公路辟建过程的荣民(眷)、专家学者现身说法，在真实、亲切的叙述中，配合画面以及相关人员辅证，将荣民对国家建设的进程分段铺陈。</p>
 <p>退辅会说，自从横贯公路成功，令全世界不可思议之余，纷纷委托荣工处协助建设，为国家建立庞大外交资源，到国内各项指标性的重大工程，都能看见荣民流血、流汗，致力建设的成果。</p>
 <p>此外，退辅会也肩负起照顾荣民的重责，无论是农场的设置，荣民总医院及荣誉国民之家，都精心规划，为荣民提供系列且完善的照护等内容贯穿全剧，并在各种情境的营造中，展现自然的故事，让观众也能感受荣民前辈们的牺牲奉献精神。</p>
@@ -24,42 +24,41 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/bdifeb3223/djy/blob/master/gb/20/11/12/n12543252.md#1">纽约老兵节游行取消 改第五大道摩托车队游行庆祝</a></li>
-<li><a href="https://github.com/bdifeb3223/djy/blob/master/gb/20/11/12/n12544696.md#1">97岁老兵马桶漏水 水费6千多 政府如此解决</a></li>
-<li><a href="https://github.com/bdifeb3223/djy/blob/master/gb/20/11/12/n12545345.md#1">一战老兵家人捐赠75年前报纸</a></li>
-<li><a href="https://github.com/bdifeb3223/djy/blob/master/gb/20/12/1/n12587067.md#1">12/9国会金章颁奖 致敬二战华人老兵</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/11/12/n12543252.md#1">纽约老兵节游行取消 改第五大道摩托车队游行庆祝</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/11/12/n12544696.md#1">97岁老兵马桶漏水 水费6千多 政府如此解决</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/11/12/n12545345.md#1">一战老兵家人捐赠75年前报纸</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/12/1/n12587067.md#1">12/9国会金章颁奖 致敬二战华人老兵</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/7/n9936116.md#1" target="_blank">林辉：误信周恩来  南开创始人郁郁而终</a></li><li><a href="https://github.com/bdifeb3223/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/17/n10720119.md#1" target="_blank">俞晓薇：迫害好人路不通 中共作恶者务必赎罪</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/11/n10382929.md#1" target="_blank">共产暴政录：公私合营（工商改造）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/28/n9085516.md#1" target="_blank">一位英国亚裔女士的生命礼物</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/bdifeb3223/djy/blob/master/gb/20/12/15/n12621699.md#1">印裔占星师分析 川普未来一个月如何逆转胜</a></li>
-<li><a href="https://github.com/bdifeb3223/djy/blob/master/gb/20/12/14/n12619436.md#1">庚子冬至木土合相 太史公和星象师有说道</a></li>
-<li><a href="https://github.com/bdifeb3223/djy/blob/master/gb/20/10/3/n12449869.md#1">《圣经》与《推背图》预言的应验与变换10</a></li>
-<li><a href="https://github.com/bdifeb3223/djy/blob/master/gb/20/12/20/n12633276.md#1">木星土星大合相 《圣经》中圣诞之星现身？</a></li>
-<li><a href="https://github.com/bdifeb3223/djy/blob/master/gb/20/12/17/n12626693.md#1">冬至“开运”民俗有哪些？</a></li>
-<li><a href="https://github.com/bdifeb3223/djy/blob/master/gb/20/12/20/n12632803.md#1">【横河直播】号召抗议活动 川普考虑多项动作</a></li>
-<li><a href="https://github.com/bdifeb3223/djy/blob/master/gb/20/12/20/n12633205.md#1">【西岸观察】考虑启用鲍威尔 川普开始反击</a></li>
-<li><a href="https://github.com/bdifeb3223/djy/blob/master/gb/20/12/18/n12628970.md#1">【思想领袖】弗林：我被“埋入”地下六尺</a></li>
-<li><a href="https://github.com/bdifeb3223/djy/blob/master/gb/20/12/19/n12632604.md#1">【秦鹏直播】川普得密报 将开始雷霆反击</a></li>
-<li><a href="https://github.com/bdifeb3223/djy/blob/master/gb/20/12/19/n12632439.md#1">全美反窃选呼声下 乔州州长突现身白宫晚会</a></li>
-<li><a href="https://github.com/bdifeb3223/djy/blob/master/gb/20/12/19/n12632208.md#1">习近平晋升4上将 泄漏中共军中多个秘密</a></li>
-<li><a href="https://github.com/bdifeb3223/djy/blob/master/gb/20/12/18/n12630930.md#1">章子怡机场一人带两娃 醒醒对着镜头打招呼</a></li>
-<li><a href="https://github.com/bdifeb3223/djy/blob/master/gb/20/12/18/n12630664.md#1">挺过2020年 台湾演艺圈十大话题</a></li>
-<li><a href="https://github.com/bdifeb3223/djy/blob/master/gb/20/12/18/n12629894.md#1">林志玲吃胖有原因 喊话“小天使快报名”</a></li>
-<li><a href="https://github.com/bdifeb3223/djy/blob/master/gb/20/12/20/n12632966.md#1">1939《华府风云》影评：打场正义之战</a></li>
-<li><a href="https://github.com/bdifeb3223/djy/blob/master/gb/20/12/20/n12633975.md#1">港警涉性侵六女童 黄秋生呛某影后默不作声</a></li>
-<li><a href="https://github.com/bdifeb3223/djy/blob/master/gb/20/12/20/n12633276.md#1">木星土星大合相 《圣经》中圣诞之星现身？</a></li>
-<li><a href="https://github.com/bdifeb3223/djy/blob/master/gb/20/12/17/n12626693.md#1">冬至“开运”民俗有哪些？</a></li>
-<li><a href="https://github.com/bdifeb3223/djy/blob/master/gb/20/12/19/n12632461.md#1">脑中风4大前兆千万别忽略！症状、治疗和复健全图解</a></li>
-<li><a href="https://github.com/bdifeb3223/djy/blob/master/gb/20/12/17/n12628167.md#1">苦味护心、酸味改善自律神经 一篇看懂五味功效</a></li>
-<li><a href="https://github.com/bdifeb3223/djy/blob/master/gb/20/12/19/n12632302.md#1">高血压硬降其实很伤身？中医揭健康降血压的关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614217.md#1">【财商天下】被踢出SWIFT 俄金融迅速“休克”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/bdifeb3223/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/bdifeb3223/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/21/n12635455.htm">微电影《筑路英雄》首映 感怀老兵为台贡献</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/21/n12635455.htm">微电影《筑路英雄》首映 感怀老兵为台贡献</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/bdifeb3223/djy/blob/master/gb/20/12/21/n12635455.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/bdifeb3223/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bdifeb3223/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/bdifeb3223/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/bdifeb3223/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/bdifeb3223/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bdifeb3223/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/bdifeb3223/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bdifeb3223/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/bdifeb3223/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bdifeb3223/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/bdifeb3223/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bdifeb3223/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/bdifeb3223/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bdifeb3223/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/bdifeb3223/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bdifeb3223/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/bdifeb3223/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bdifeb3223/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/bdifeb3223/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bdifeb3223/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/bdifeb3223/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bdifeb3223/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/bdifeb3223/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bdifeb3223/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/bdifeb3223/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bdifeb3223/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/bdifeb3223/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bdifeb3223/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/bdifeb3223/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bdifeb3223/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/bdifeb3223/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bdifeb3223/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/bdifeb3223/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bdifeb3223/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/bdifeb3223/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bdifeb3223/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/bdifeb3223/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bdifeb3223/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/bdifeb3223/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bdifeb3223/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/bdifeb3223/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bdifeb3223/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/bdifeb3223/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bdifeb3223/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/bdifeb3223/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bdifeb3223/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/bdifeb3223/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bdifeb3223/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/12/21/n12635455.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
